# TeamspeakStats

./: .coveragerc  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  template.html  testing_requirements.txt  tsstats.py
.github/workflows/: publish.yml  test.yml
docs/: Makefile  api.rst  cli.rst  conf.py  config.rst  development.rst  identmap.rst  index.rst
docs/source/: api.rst  cli.rst  conf.py  config.rst  identmap.rst  index.rst  quickstart.rst
tests/: test_config.py  test_general.py  test_ident_map.py  test_style.py  test_template.py
tests/res/: config.ini  test.log.broken
tsstats/: __init__.py  __main__.py  cache.py  client.py  config.py  events.py  exceptions.py  log.py  logger.py  template.html  template.py  utils.py
tsstats/templates/: index.jinja2  stats.jinja2
tsstats/tests/: conftest.py  test_cache.py  test_client.py  test_config.py  test_general.py  test_ident_map.py  test_log.py  test_template.py
tsstats/tests/res/: config.ini  id_map.json  test.log.broken  test.log.groups  test.log.identmap_wrong_identifier  test.log.stopped  test.log.utf8
